# web_order_data_entry_system

./: README.md
web_order_data_entry_system/: .gitignore  CLAUDE.md  README.md  pyproject.toml
web_order_data_entry_system/order-management/: app.py
web_order_data_entry_system/order-management/data/: customers.csv  orders.csv  products.csv
web_order_data_entry_system/order-management/templates/: index.html
web_order_data_entry_system/order_management/: app.py
web_order_data_entry_system/order_management/data/: customers.csv  orders.csv  price_lists.csv  products.csv
web_order_data_entry_system/order_management/templates/: index.html
