[project]
name = "web-order-data-entry-system"
version = "0.1.0"
description = "Web-based order data entry and management system"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "openpyxl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["order_management"]

[project.scripts]
web-order = "order_management.app:main"